--- a/VidCoder/Resources/Translations/EncodeDetailsRes.es.resx
+++ b/VidCoder/Resources/Translations/EncodeDetailsRes.es.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="EncodeDetailsWindowTitle" xml:space="preserve">
-    <value>Detalles de codificacion</value>
+    <value>Detalles de codificación</value>
   </data>
   <data name="QueueSectionHeader" xml:space="preserve">
     <value>Cola</value>
@@ -134,7 +134,7 @@
     <value>Segunda pasada:</value>
   </data>
   <data name="EncodePassLabel" xml:space="preserve">
-    <value>Pasada codificando:</value>
+    <value>Pasada de codificación:</value>
   </data>
   <data name="JobLabel" xml:space="preserve">
     <value>Trabajo:</value>
