--- a/VidCoder/Resources/Translations/EnumsRes.ru.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.ru.resx
@@ -184,14 +184,18 @@
   <data name="Denoise_NLMeans" xml:space="preserve">
     <value>NL-Means</value>
   </data>
-  
+  <data name="EncodeCompleteActionType_CloseProgram" xml:space="preserve">
+    <value>Закрыть VidCoder</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Ничего не делать</value>
   </data>
   <data name="EncodeCompleteActionType_EjectDisc" xml:space="preserve">
     <value>Извлечь {0}:</value>
   </data>
-  
+  <data name="EncodeCompleteActionType_Hibernate" xml:space="preserve">
+    <value>Гибернация</value>
+  </data>
   <data name="EncodeCompleteActionType_LogOff" xml:space="preserve">
     <value>Выйти</value>
   </data>
@@ -204,9 +208,18 @@
   <data name="Off" xml:space="preserve">
     <value>Выкл</value>
   </data>
-  
-  
-  
+  <data name="TitleType_Bluray" xml:space="preserve">
+    <value>Blu-ray</value>
+    <comment>What to display when the source is a Blu-ray</comment>
+  </data>
+  <data name="TitleType_Dvd" xml:space="preserve">
+    <value>DVD</value>
+    <comment>What to display when the source is a DVD</comment>
+  </data>
+  <data name="TitleType_Stream" xml:space="preserve">
+    <value>Файл</value>
+    <comment>What to display when the source is a file</comment>
+  </data>
   <data name="VideoRangeType_Chapters" xml:space="preserve">
     <value>Главы</value>
   </data>
