--- a/VidCoder/Resources/Translations/PickerRes.es.resx
+++ b/VidCoder/Resources/Translations/PickerRes.es.resx
@@ -117,44 +117,133 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="AudioSelection" xml:space="preserve">
+    <value>Selección de audio</value>
+  </data>
+  <data name="BurnInCheckBox" xml:space="preserve">
+    <value>"Pegados" al video</value>
+  </data>
+  <data name="DefaultCheckBox" xml:space="preserve">
+    <value>Predeterminado</value>
+  </data>
+  <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
+    <value>Idioma extrangero</value>
+  </data>
+  <data name="IncludeAllTracksRadioButton" xml:space="preserve">
+    <value>Todas las pistas</value>
+  </data>
+  <data name="LanguagesRadioButton" xml:space="preserve">
+    <value>Idioma (s)</value>
+  </data>
+  <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
+    <value>Solo si el lenguaje es diferente del audio</value>
+    <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the audio track.</comment>
+  </data>
+  <data name="SubtitleSelection" xml:space="preserve">
+    <value>Selección de subtítulos</value>
+  </data>
+  <data name="WindowTitle" xml:space="preserve">
+    <value>Selección: {0}</value>
+  </data>
+  <data name="TitleSelection" xml:space="preserve">
+    <value>Selección de título</value>
+  </data>
+  <data name="PickerButtonFormat" xml:space="preserve">
+    <value>Selector: {0}</value>
+    <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
+  </data>
+  <data name="OutputLocation" xml:space="preserve">
+    <value>Ubicación de salida</value>
+  </data>
+  <data name="OverrideDirectoryCheckBox" xml:space="preserve">
+    <value>Reemplazar el directorio:</value>
+  </data>
+  <data name="PickerHelpText" xml:space="preserve">
+    <value>Automáticamente escoge títulos, audio, subtítulos y destino</value>
+  </data>
+  <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
+    <value>Automáticamente pone en cola después de analizar el archivo</value>
+  </data>
+  <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
+    <value>Empezar la codificación después de analizar el archivo</value>
+  </data>
+  <data name="UseGlobalSettingToolTip" xml:space="preserve">
+    <value>Usar configuración global</value>
+    <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
+  </data>
+  <data name="PresetOverrideToolTip" xml:space="preserve">
+    <value>Esto reemplazará cualquier preset seleccionado en la ventana principal.</value>
+  </data>
+  <data name="EncodingSection" xml:space="preserve">
+    <value>Codificación</value>
+    <comment>The header for the Encoding section in the Picker window.</comment>
+  </data>
+  <data name="PostEncodingSection" xml:space="preserve">
+    <value>Post codificación</value>
+    <comment>Header for the post-encoding section in the picker window.</comment>
+  </data>
+  <data name="SendFileToLabel" xml:space="preserve">
+    <value>Enviar archivo a:</value>
+    <comment>Label for the option to run a program after encoding each file.</comment>
+  </data>
+  <data name="PostEncodeArgumentsLabel" xml:space="preserve">
+    <value>Argumentos:</value>
+    <comment>The label for the arguments to pass to the post-encode executable.</comment>
+  </data>
+  <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
+    <value>Los argumentos a enviar al programa. Utilice {file} para la ruta del archivo de salida.</value>
+    <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
+  </data>
+  <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
+    <value>El selector ha especificado el preset de codificación.</value>
+  </data>
+  <data name="AddLanguageButton" xml:space="preserve">
+    <value>Agregar Idioma</value>
+  </data>
+  <data name="AllTracksForTheseLanguagesRadioButton" xml:space="preserve">
+    <value>Todas las pistas para estos idiomas</value>
+  </data>
+  <data name="AllTracksForThisLanguageRadioButton" xml:space="preserve">
+    <value>Todas las pistas para este idioma</value>
+  </data>
+  <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
+    <value>Primera pista de cada idioma</value>
+  </data>
+  <data name="FirstTrackRadioButton" xml:space="preserve">
+    <value>Primera pista</value>
+  </data>
+  <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
+    <value>Seleccione la pista de subtítulos por defecto; estos se mostrarán automáticamente al reproducir el video.</value>
+  </data>
+  <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
+    <value>Seleccione la primera pista de subtítulos por defecto; estos se mostrarán automáticamente al reproducir el video.</value>
+  </data>
+  <data name="FirstAsDefaultCheckBox" xml:space="preserve">
+    <value>Marque el primero como predeterminado</value>
+    <comment>Label for checkbox to mark the first subtitle as default.</comment>
+  </data>
+  <data name="AllSubtitlesToolTip" xml:space="preserve">
+    <value>Incluir todos los subtítulos.</value>
+  </data>
+  <data name="SubtitleNoneToolTip" xml:space="preserve">
+    <value>No se incluyeron subtítulos.</value>
+  </data>
+  <data name="AudioFirstToolTip" xml:space="preserve">
+    <value>Incluir sólo la primera pista de audio.</value>
+  </data>
+  <data name="AudioAllToolTip" xml:space="preserve">
+    <value>Incluir todas las pistas.</value>
+  </data>
+  <data name="SubtitleFirstToolTip" xml:space="preserve">
+    <value>Incluir sólo el primer subtítulo.</value>
+  </data>
+  <data name="PresetLabel" xml:space="preserve">
+    <value>Preset utilizado:</value>
+  </data>
+  <data name="RemoveLanguageToolTip" xml:space="preserve">
+    <value>Quitar éste idioma.</value>
+  </data>
+  <data name="SortLanguagesLabel" xml:space="preserve">
+    <value>Ordenar idioma(s) al principio:</value>
+  </data>
 </root>
