--- a/VidCoder/Resources/Translations/PickerRes.ru.resx
+++ b/VidCoder/Resources/Translations/PickerRes.ru.resx
@@ -117,44 +117,133 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="AudioSelection" xml:space="preserve">
+    <value>Выбор аудио</value>
+  </data>
+  <data name="BurnInCheckBox" xml:space="preserve">
+    <value>Записать в</value>
+  </data>
+  <data name="DefaultCheckBox" xml:space="preserve">
+    <value>По умолчанию</value>
+  </data>
+  <data name="ForeignAudioSearchRadioButton" xml:space="preserve">
+    <value>По поиску иностранного звука</value>
+  </data>
+  <data name="IncludeAllTracksRadioButton" xml:space="preserve">
+    <value>Все категории</value>
+  </data>
+  <data name="LanguagesRadioButton" xml:space="preserve">
+    <value>Язык(и)</value>
+  </data>
+  <data name="OnlyIfDifferentFromAudioCheckBox" xml:space="preserve">
+    <value>Только если другой язык аудио</value>
+    <comment>Label for checkbox on subtitle picker. When checked, it will only include the subtitle if it's a different language from the audio track.</comment>
+  </data>
+  <data name="SubtitleSelection" xml:space="preserve">
+    <value>Выбор субтитров</value>
+  </data>
+  <data name="WindowTitle" xml:space="preserve">
+    <value>Выбор: {0}</value>
+  </data>
+  <data name="TitleSelection" xml:space="preserve">
+    <value>Выбор субтитров</value>
+  </data>
+  <data name="PickerButtonFormat" xml:space="preserve">
+    <value>Выбор: {0}</value>
+    <comment>{0} is the name of the picker. This string shows up on the picker split button.</comment>
+  </data>
+  <data name="OutputLocation" xml:space="preserve">
+    <value>Настройки вывода</value>
+  </data>
+  <data name="OverrideDirectoryCheckBox" xml:space="preserve">
+    <value>Переопределить каталог:</value>
+  </data>
+  <data name="PickerHelpText" xml:space="preserve">
+    <value>Автоматически выберите титулов, аудио, субтитры и назначения</value>
+  </data>
+  <data name="AutoQueueOnScanCheckBox" xml:space="preserve">
+    <value>Автоматическая очередь после сканирования</value>
+  </data>
+  <data name="AutoEncodeOnScanCheckBox" xml:space="preserve">
+    <value>Начать кодирование после сканирования</value>
+  </data>
+  <data name="UseGlobalSettingToolTip" xml:space="preserve">
+    <value>Настройки системы</value>
+    <comment>Label for the "indeterminate" checkbox state that lets the user know that this will fall back to the global setting</comment>
+  </data>
+  <data name="PresetOverrideToolTip" xml:space="preserve">
+    <value>Это переопределит любой пресет, взял в главном окне.</value>
+  </data>
+  <data name="EncodingSection" xml:space="preserve">
+    <value>Кодировка</value>
+    <comment>The header for the Encoding section in the Picker window.</comment>
+  </data>
+  <data name="PostEncodingSection" xml:space="preserve">
+    <value>После кодирования</value>
+    <comment>Header for the post-encoding section in the picker window.</comment>
+  </data>
+  <data name="SendFileToLabel" xml:space="preserve">
+    <value>Отправить файл для:</value>
+    <comment>Label for the option to run a program after encoding each file.</comment>
+  </data>
+  <data name="PostEncodeArgumentsLabel" xml:space="preserve">
+    <value>Аргументы:</value>
+    <comment>The label for the arguments to pass to the post-encode executable.</comment>
+  </data>
+  <data name="PostEncodeArgumentsToolTip" xml:space="preserve">
+    <value>Аргументы для передачи в программу. Используйте {file} для файла выходного пути.</value>
+    <comment>Tool tip for the post-encode arguments UI. Do not translate {file} .</comment>
+  </data>
+  <data name="PresetDisabledForPickerToolTip" xml:space="preserve">
+    <value>Выбор указанной кодировки пресет.</value>
+  </data>
+  <data name="AddLanguageButton" xml:space="preserve">
+    <value>Добавить язык</value>
+  </data>
+  <data name="AllTracksForTheseLanguagesRadioButton" xml:space="preserve">
+    <value>Все треки для этих языков</value>
+  </data>
+  <data name="AllTracksForThisLanguageRadioButton" xml:space="preserve">
+    <value>Все треки для этих языков</value>
+  </data>
+  <data name="FirstTrackOfEachLanguageRadioButton" xml:space="preserve">
+    <value>Первый трек каждого языка</value>
+  </data>
+  <data name="FirstTrackRadioButton" xml:space="preserve">
+    <value>Первый трек</value>
+  </data>
+  <data name="SingleSubtitleDefaultToolTip" xml:space="preserve">
+    <value>Отметьте дорожку субтитров по умолчанию, так она будет отображаться автоматически при воспроизведении видео.</value>
+  </data>
+  <data name="MultipleSubtitleDefaultToolTip" xml:space="preserve">
+    <value>Отметьте дорожку субтитров по умолчанию, так она будет отображаться автоматически при воспроизведении видео.</value>
+  </data>
+  <data name="FirstAsDefaultCheckBox" xml:space="preserve">
+    <value>Отмеченный как первый по умолчанию</value>
+    <comment>Label for checkbox to mark the first subtitle as default.</comment>
+  </data>
+  <data name="AllSubtitlesToolTip" xml:space="preserve">
+    <value>Включить все субтитры.</value>
+  </data>
+  <data name="SubtitleNoneToolTip" xml:space="preserve">
+    <value>Субтитры не включены.</value>
+  </data>
+  <data name="AudioFirstToolTip" xml:space="preserve">
+    <value>Включить только первую звуковую дорожку.</value>
+  </data>
+  <data name="AudioAllToolTip" xml:space="preserve">
+    <value>Включить все треки.</value>
+  </data>
+  <data name="SubtitleFirstToolTip" xml:space="preserve">
+    <value>Включать только первые субтитры.</value>
+  </data>
+  <data name="PresetLabel" xml:space="preserve">
+    <value>Использование настроек:</value>
+  </data>
+  <data name="RemoveLanguageToolTip" xml:space="preserve">
+    <value>Удалить язык.</value>
+  </data>
+  <data name="SortLanguagesLabel" xml:space="preserve">
+    <value>Язык(и) сортировки к началу:</value>
+  </data>
 </root>
