--- a/VidCoder/Resources/Translations/PreviewRes.es.resx
+++ b/VidCoder/Resources/Translations/PreviewRes.es.resx
@@ -139,7 +139,7 @@
     <value>Reproduce el video fuente.</value>
   </data>
   <data name="PreviewClipGenerationFailedMessage" xml:space="preserve">
-    <value>Fallo la generacion de clip avance. Ver la ventana de Log para mas detalles.</value>
+    <value>Fallo la generación de clip previsualizacion. Ver la ventana de Log para mas detalles.</value>
   </data>
   <data name="PreviewClipGenerationFailedTitle" xml:space="preserve">
     <value>Fallo la generación de clip avance</value>
@@ -183,10 +183,23 @@
 	<data name="PlaySourceDisabledNotFoundToolTip" xml:space="preserve">
     <value>No se pudo encontrar el archivo de origen.</value>
   </data>
-  
-  
-  
-  
-  
-  
+  <data name="CloseVideoButton" xml:space="preserve">
+    <value>Cerra video</value>
+    <comment>Button to close the preview video clip.</comment>
+  </data>
+  <data name="OpenInSystemPlayerButton" xml:space="preserve">
+    <value>Abrir en el reproductor predeterminado por el sistema</value>
+  </data>
+  <data name="VolumeSliderLabel" xml:space="preserve">
+    <value>Volumen</value>
+  </data>
+  <data name="ReplayPreviewButton" xml:space="preserve">
+    <value>Repetir preview</value>
+  </data>
+  <data name="VideoErrorMessage" xml:space="preserve">
+    <value>El video no se pudo ver con el reproductor interno. Desea abrirlo con el reproductor predeterminado del sistema?</value>
+  </data>
+  <data name="VideoErrorTitle" xml:space="preserve">
+    <value>Error de video</value>
+  </data>
 </root>
