--- a/VidCoder/Resources/Translations/SubtitleRes.es.resx
+++ b/VidCoder/Resources/Translations/SubtitleRes.es.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="SubtitlesWindowTitle" xml:space="preserve">
-    <value>Subtitulos</value>
+    <value>Subtítulos</value>
   </data>
   <data name="RemoveSubtitleTrack" xml:space="preserve">
     <value>Quitar esta pista</value>
@@ -127,7 +127,7 @@
     <value>Subtítulos de la fuente:</value>
   </data>
   <data name="QuickTimeSubtitlesWarning" xml:space="preserve">
-    <value>Los subtitulos pueden no aparecer en Quicktime a menos que se use la extension m4v.</value>
+    <value>Puede que QuickTime no muestre los subtítulos si no se utiliza la extensión m4v.</value>
   </data>
   <data name="NameColumn" xml:space="preserve">
     <value>Nombre</value>
@@ -136,13 +136,13 @@
     <value>Predeterminado</value>
   </data>
   <data name="ForcedOnlyColumn" xml:space="preserve">
-    <value>Forzados solamente</value>
+    <value>Sólo forzados</value>
   </data>
   <data name="BurnedInColumn" xml:space="preserve">
     <value>Pegados</value>
   </data>
   <data name="ExternalSubtitlesLabel" xml:space="preserve">
-    <value>Subtitulos externos:</value>
+    <value>Subtítulos externos:</value>
   </data>
   <data name="FileColumn" xml:space="preserve">
     <value>Archivo</value>
@@ -151,7 +151,7 @@
     <value>Idioma</value>
   </data>
   <data name="CharCodeColumn" xml:space="preserve">
-    <value>Codigo de caracteres</value>
+    <value>Codificación de caracteres</value>
   </data>
   <data name="OffsetColumn" xml:space="preserve">
     <value>Desplazamiento (ms)</value>
@@ -166,7 +166,7 @@
     <value>Busqueda de Audio Externo</value>
   </data>
   <data name="AddSourceNoSubtitlesToolTip" xml:space="preserve">
-    <value>El video origen no tiene subtitulos.</value>
+    <value>El vídeo de origen no tiene subtítulos.</value>
   </data>
   <data name="SrtFilePickerText" xml:space="preserve">
     <value>Agregar archivo de subtítulos</value>
@@ -174,5 +174,7 @@
 	<data name="DuplicateSubtitleTrack" xml:space="preserve">
     <value>Duplicar esta pista</value>
   </data>
-  
+  <data name="SubtitleCharsetDetectionFailedMessage" xml:space="preserve">
+    <value>No se pudo detectar la codificación del archivo de subtítulos. Para asegurarse de que los subtítulos aparecen correctamente, vuelva a guardar el archivo como UTF-8.</value>
+  </data>
 </root>
